environments/vn-prod/based/security_groups.tf
resource "aws_security_group" "sg_base" {
  name   = "sg_base"
  vpc_id = aws_vpc.prod.id
  tags = {
    Name = "default-sg-base"
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8
    to_port     = 0
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
